# testify

./: Cargo.toml  LICENSE  README.md
src/example/: Cargo.toml
src/example/src/: main.rs
src/testify/: Cargo.toml
src/testify/src/: lib.rs
src/testify_core/: Cargo.toml
src/testify_core/src/: lib.rs  runner.rs  test.rs
src/testify_macros/: Cargo.toml
src/testify_macros/src/: lib.rs
src/testify_rs/: Cargo.toml
src/testify_rs/src/: lib.rs
