[workspace]
members = [ "src/example","src/testify_rs", "src/testify_core", "src/testify_macros"]
resolver = "3"

[workspace.metadata.release]
shared-version = true
publish = true
tag = true
pre-release-commit-message = "chore: 🔖 Bump version to {{version}}."

[workspace.dependencies]
testify-rs ={ version = "*", path = "src/testify_rs" }
testify_core = { version = "*", path = "src/testify_core" }
testify_macros = { version = "*", path = "src/testify_macros" }
