[package]
name = "testify-rs"
description = "An enhanced testing suite for Rust."
version = "0.1.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Nekidev/testify"
readme = "../../README.md"
authors = ["Rafael Bradley"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ctor = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
testify_core = { version = "*", path = "../testify_core" }
testify_macros = { version = "*", path = "../testify_macros" }

[lib]
name = "testify"

[[bin]]
name = "cargo-testify"
path = "src/bin/cargo-testify.rs"

[features]
default = []
async-tokio = ["testify_core/async-tokio", "testify_macros/async-tokio"]
