[package]
name = "testify-rs"
description = "An enhanced testing suite for Rust."
version = "0.1.4"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Nekidev/testify"
readme = "../../README.md"
authors = ["Rafael Bradley"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ctor = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
testify-core = { workspace = true }
testify-macros = { workspace = true }

[lib]
name = "testify"

[[bin]]
name = "cargo-testify"
path = "src/bin/cargo-testify.rs"

[features]
default = []
async-tokio = ["testify-core/async-tokio", "testify-macros/async-tokio"]
